Study/TodoApp/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todoapp
  labels:
    name: todoapp
    app.kubernetes.io/managed-by: kubectl
